src/sass/layouts/_header.scss
.header {
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.header-wrap {
  padding: 6px 20px;
  display: flex;
  align-items: center;
}

.mobile-menu__open {
  background-color: transparent;
  border: none;
  display: block;
  padding: 0;
  height: 12px;
  margin-left: auto;
}

.mobile-menu {
  width: 254px;
  height: 100vh;
  position: fixed;
  top: 0;
  right: 0;
  background-color: #e17992;
  &.is-hidden {
    // opacity: 0;
    transform: translateX(100%);
    transition: translateX $transition-duration $timing-function;
    pointer-events: none;
  }
  &__close {
    display: block;
    margin-left: auto;
    margin-top: 23px;
    margin-right: 24px;
    background-color: transparent;
    border: none;
    cursor: pointer;
  }
}

.header__btn {
  font-family: $main-font;
  font-weight: bold;
  font-size: 16px;
  line-height: 21px;
  display: flex;
  align-items: center;
  text-align: center;
  margin-bottom: 19px;
  cursor: pointer;
  color: $accent-color;
  background-color: $main-white-color;
  border: none;
  width: auto;
  padding: 11px 49px;
  border-radius: 22px;
  margin-top: 23px;
  margin-right: auto;
  margin-left: auto;
  transition: color $transition-duration $timing-function;
  &:hover {
    background-color: $btn-accent-hover-color;
    color: $btn-hover-color;
  }
}

.mob-menu__item {
  width: 100%;
  padding-left: 21px;
  padding-top: 13px;
  padding-bottom: 11px;
  border-top: 1px solid #e18298;
  border-bottom: 1px solid #e18298;
}

.mob-menu__link {
  font-weight: bold;
  font-size: 14px;
  line-height: 18px;
  align-items: center;
  color: $main-white-color;
  transition: color $transition-duration $timing-function;
  &:hover {
    color: $accent-color;
  }
}

